# Sudoku

./: main.py  mat.npy  pyproject.toml
sudoku/: __init__.py  main.py  stats
